--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,8 @@ jobs:
 
     - name: Update image tag in deployment
       run: |
-        sed -i 's|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/hello-fastapi:latest|' deployment.yaml
+        sed -i "s|image: .*|image: ${{ secrets.DOCKER_USERNAME }}/hello-fastapi:latest|" deployment.yaml
+
 
     - name: Commit and push changes
       run: |
