--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
       with:
         repository: ArleyGabriel06/hello-manifests 
         token: ${{ secrets.GB_TOKEN }}
+        path: hello-manifests
 
     - name: Update image tag in deployment
       run: |
