--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
         token: ${{ secrets.GB_TOKEN }}
         path: hello-manifests
 
-    - name: Update image tag in deployment
+    - name: Atualizar imagem no YAML
       run: |
         sed -i 's|image: .*|image: '"${{ secrets.DOCKER_USERNAME }}"'/hello-fastapi:'"${{ github.sha }}"'|' hello-manifests/deployment.yaml
 
