--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,41 +8,42 @@ jobs:
   build-and-push:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: .
-        push: true
-        tags: ${{ secrets.DOCKER_USERNAME }}/hello-fastapi:${{ github.sha }}
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/hello-fastapi:${{ github.sha }}
 
   update-manifest:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout manifests repository
-      uses: actions/checkout@v3
-      with:
-        repository: ArleyGabriel06/hello-manifests
-        token: ${{ secrets.GB_TOKEN }}
-        path: hello-manifests
+      - name: Checkout manifests repository
+        uses: actions/checkout@v3
+        with:
+          repository: ArleyGabriel06/hello-manifests
+          token: ${{ secrets.GB_TOKEN }}
+          path: hello-manifests  # ✅ importante para o sed funcionar
 
-    - name: Atualizar imagem no YAML
-      run: |
-        sed -i 's|image: .*|image: '"${{ secrets.DOCKER_USERNAME }}"'/hello-fastapi:'"${{ github.sha }}"'|' hello-manifests/deployment.yaml
+      - name: Atualizar imagem no YAML
+        run: |
+          sed -i 's|image: .*|image: '"${{ secrets.DOCKER_USERNAME }}"'/hello-fastapi:'"${{ github.sha }}"'|' hello-manifests/deployment.yaml
 
-
-    - name: Commit and push changes
-      run: |
-        git config --global user.name '${{ secrets.USER_NAME }}'
-        git config --global user.email '${{ secrets.EMAIL_NAME }}'
-        git commit -am "Atualiza imagem para 'latest' - $(date +'%d/%m/%Y %H:%M')"
-        git push
+      - name: Commit and push changes
+        working-directory: hello-manifests  # ✅ necessário para git funcionar dentro da pasta
+        run: |
+          git config user.name '${{ secrets.USER_NAME }}'
+          git config user.email '${{ secrets.EMAIL_NAME }}'
+          git add deployment.yaml
+          git commit -m "Atualiza imagem para commit ${{ github.sha }}"
+          git push
